Add theme toggle button for dark mode

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <div class="app-shell">
     <header>
       <h1>IPF Technical Rules – Mock Exams</h1>
-
+      <button id="themeToggle" class="theme-toggle">
+  🌙 Dark Mode
+</button>
       <label>Select Exam Version:</label>
       <select id="examSelect"></select>
     </header>
