Add Save Progress button to index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <span id="scoreSummary" class="score-summary"></span>
         </div>
         <button id="submitButton" class="primary-btn">Mark Exam</button>
+        <button id="saveProgressBtn" class="secondary-btn">Save Progress</button>
       </div>
 
       <div id="exportButtons" class="export-buttons" style="display:none;">
