Add navigation buttons to the bottom of the page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <button id="exportFull" class="export-btn">Download Full Results</button>
         <button id="exportWrong" class="export-btn">Download Incorrect Only</button>
       </div>
+      <div class="section-nav bottom-nav">
+  <button id="prevSectionBottom" class="nav-btn">← Previous</button>
+  <button id="nextSectionBottom" class="nav-btn">Next →</button>
+</div>
     </main>
   </div>
 
