--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>IPF Technical Rules – Mock Exams</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <div class="app-shell">
