--- a/index.html
+++ b/index.html
@@ -74,5 +74,10 @@
 
   <script src="js/exams.js"></script>
   <script src="js/app.js"></script>
+  <script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js");
+  }
+</script>
 </body>
 </html>
