Add custom splash screen to index.html
Add custom splash screen with logo to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <div class="app-shell">
+    <div id="customSplash" class="custom-splash">
+  <img src="icons/icon-512.png" alt="IPF Logo" class="splash-logo">
+</div>
     <header class="app-header">
       <div class="header-top">
         <h1>IPF Technical Rules<br>Mock Exams</h1>
